--- a/app/src/main/res/drawable/botao_principal.xml
+++ b/app/src/main/res/drawable/botao_principal.xml
@@ -18,7 +18,7 @@
 <item>
     <shape android:shape="rectangle">
         <corners android:radius="25dp" />
-        <solid android:color="@color/colorPrimary" />
+        <solid android:color="@color/colorAccent" />
     </shape>
 </item>
 </selector>
