--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:id="@+id/acitivity_splash_icone_app"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_marginBottom="@dimen/margin_standard"
         android:src="@drawable/ic_app"
         app:layout_constraintBottom_toTopOf="@+id/acitivity_splash_titulo_app"
