--- a/app/src/main/res/layout/fragment_configuracao.xml
+++ b/app/src/main/res/layout/fragment_configuracao.xml
@@ -7,8 +7,9 @@
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/configuracao_imageView"
-        android:layout_width="0dp"
-        android:layout_height="135dp"
+        android:layout_marginTop="30dp"
+        android:layout_width="60dp"
+        android:layout_height="80dp"
         android:src="@drawable/ic_app"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
